complete speedy link app

--- a/client/src/App.css
+++ b/client/src/App.css
@@ -1,37 +1,50 @@
+body{
+  margin: 0;
+  padding: 0;
 
+}
 .text-center{
 text-align: center;
+font-family: Georgia, 'Times New Roman', Times, serif;
+background-color: #fff;
+padding: 10px;
+margin: 0;
+
+
 }
 .app-container{
   display: flex;
   justify-content: space-around;
   flex-wrap: wrap;
+  margin-top: 50px;
 }
 .link-generation-card{
   background-color: white;
   border-radius: 10px;
   padding: 20px;
   margin:20px ;
-  box-shadow: 0 0 10px 0 #ccc;
+  box-shadow:2px 2px 10px rgba(0, 0, 0, 0.2);
+  height: 300px;
 }
 .user-input{
   display: block;
   width: 300px;
-  margin-bottom: 10px;
+  margin-bottom: 18px;
   font-size: 20px;
   padding: 5px 10px;
 
 }
 .btn-generate-link{
-  background-color: rgb(34, 34, 134);
+  background-color: black;
   color: white;
   border: none;
   padding:10px 30px;
   font-size: 20px;
   border-radius: 20px;
   display: block;
-  margin: 10px auto;
+  margin: 40px auto;
   cursor: pointer;
+  font-family: Georgia, 'Times New Roman', Times, serif;
 
 }
 .cpoy-icon{
@@ -48,4 +61,26 @@ text-align: center;
   display: flex;
   justify-content: space-around;
   align-items:center;
+}
+
+.link-card{
+  background-color: #fff;
+  padding: 3px 20px ;
+  margin: 10px;
+  border-radius: 10px;
+  box-shadow:2px 2px 10px rgba(0, 0, 0, 0.2);
+}
+.all-links-cont{
+  height: 80vh;
+  overflow-y:scroll ;
+ -ms-overflow-style:none;
+ scrollbar-width:1px;
+
+}
+.all-links-cont::-webkit-scrollbar{
+  display: none;
+}
+.links{
+  font-size: 15px;
+  font-weight: bold;
 }
